# python-project-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  copier.yml  pyproject.toml
tests/unit/: test_sample.py
{{project_name}}/: .pre-commit-config.yaml  LICENSE  mkdocs.yml
{{project_name}}/.github/: PULL_REQUEST_TEMPLATE.md
{{project_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{project_name}}/.github/workflows/: ci.yml
