[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ project_description }}"
authors = ["{{ author_name }} <{{ author_email }}>"]
readme = "README.md"
packages = [{include = "{{ package_name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^{{ python_version }}"

# Data manipulation & analysis
numpy = ">=1.26"
pandas = ">=2.0"
scipy = ">=1.12"
statsmodels = ">=0.14"
scikit-learn = ">=1.4"

# Visualisation
matplotlib = ">=3.8"
matplotlib-inline = ">=0.1"
seaborn = ">=0.13"
plotly = ">=5.20"

# Notebooks & kernels
ipykernel = ">=6.0"
jupyter = ">=1.0"
jupyterlab = ">=4.0"

# Spreadsheet & file handling
openpyxl = ">=3.1"
et-xmlfile = ">=1.1"
fonttools = ">=4.50"
packaging = ">=24.0"
pyarrow = ">=15.0"

# Utilities
loguru = ">=0.7"
tqdm = ">=4.66"
rich = ">=13.0"
python-dateutil = ">=2.9"

{% if use_duckdb %}
duckdb = ">=0.10.0"
{% endif %}
{% if use_dotenv %}
python-dotenv = ">=1.0.0"
{% endif %}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
ruff = ">=0.4"
mypy = ">=1.0"
pre-commit = ">=3.0"
{% if use_notebooks %}
nbstripout = ">=0.7"
{% endif %}

{% if use_docs %}
[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
{% endif %}

[tool.ruff]
line-length = 88
target-version = "py{{ python_version | replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "{{ python_version }}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
